- Implementierung Spinner in activity_edit.xml - Implementierung div. Methoden in EditActivity.java - TODO in EditControllerInterf.java - Eintraege fuer Spinner in strings.xml eingefuegt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
     <string name="app_name">ShopAdminAndroid</string>
     <string name="action_settings">Settings</string>
+
+    <!-- Items of category dropdown in editView. Add more if necessary -->
+    <string-array name="category_array">
+        <item>Food</item>
+        <item>Cosmetics</item>
+        <item>unknown</item>
+    </string-array>
+    <!-- END - Items of category dropdown in editView. Add more if necessary - END -->
+
 </resources>
